src/test/ui/regions/regions-implied-bounds-projection-gap-3.stderr
error: compilation successful
  --> $DIR/regions-implied-bounds-projection-gap-3.rs:33:1
   |
LL | fn main() { } //~ ERROR compilation successful
   | ^^^^^^^^^^^^^

error: aborting due to previous error

